# maf-agent-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agents.py  config.py  main.py
